--- a/src/main/resources/cartridge/bin/install
+++ b/src/main/resources/cartridge/bin/install
@@ -4,39 +4,46 @@
 
 source $OPENSHIFT_CARTRIDGE_SDK_BASH
 
+case "$1" in
+  -v|--version) wmq_version="$2"
+  ;;
+  *) wmq_version="${wmq.version}"
+  ;;
+esac
+
 env_dir="${OPENSHIFT_JBOSSWMQ_DIR}/env"
 
 if [ "x$OPENSHIFT_JBOSSWMQ_JNDI_NAME" == "x" ]; then
-  set_env_var 'OPENSHIFT_JBOSSWMQ_JNDI_NAME' "${wmq.jndiName}" $env_dir
+  OPENSHIFT_JBOSSWMQ_JNDI_NAME="${wmq.jndiName}"
+  set_env_var 'OPENSHIFT_JBOSSWMQ_JNDI_NAME' "$OPENSHIFT_JBOSSWMQ_JNDI_NAME" $env_dir
 fi
 
-if [ "x$OPENSHIFT_JBOSSWMQ_HOST" == "x" ]; then
-  set_env_var 'OPENSHIFT_JBOSSWMQ_HOST' "${wmq.host}" $env_dir
-fi
-
-if [ "x$OPENSHIFT_JBOSSWMQ_PORT" == "x" ]; then
-  set_env_var 'OPENSHIFT_JBOSSWMQ_PORT' "${wmq.port}" $env_dir
+if [ "x$OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST" == "x" ]; then
+  OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST="${wmq.connectionNameList}"
+  set_env_var 'OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST' "$OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST" $env_dir
 fi
 
 if [ "x$OPENSHIFT_JBOSSWMQ_CHANNEL" == "x" ]; then
-  set_env_var 'OPENSHIFT_JBOSSWMQ_CHANNEL' "${wmq.channel}" $env_dir
+  OPENSHIFT_JBOSSWMQ_CHANNEL="${wmq.channel}"
+  set_env_var 'OPENSHIFT_JBOSSWMQ_CHANNEL' "$OPENSHIFT_JBOSSWMQ_CHANNEL" $env_dir
 fi
 
 if [ "x$OPENSHIFT_JBOSSWMQ_QUEUE_MANAGER" == "x" ]; then
-  set_env_var 'OPENSHIFT_JBOSSWMQ_QUEUE_MANAGER' "${wmq.queueManager}" $env_dir
+  OPENSHIFT_JBOSSWMQ_QUEUE_MANAGER="${wmq.queueManager}"
+  set_env_var 'OPENSHIFT_JBOSSWMQ_QUEUE_MANAGER' "$OPENSHIFT_JBOSSWMQ_QUEUE_MANAGER" $env_dir
 fi
 
+client_result "WebSphere MQ RAR cartridge ${project.version} added (supports WebSphere MQ RAR ${wmq_version})."
+
+client_result ""
+client_result "Please make note of these credentials:"
+client_result ""
+client_result "  ConnectionNameList : ${OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST}"
+client_result "  Channel            : ${OPENSHIFT_JBOSSWMQ_CHANNEL}"
+client_result "  Queue Manager      : ${OPENSHIFT_JBOSSWMQ_QUEUE_MANAGER}"
+client_result ""
+
 cart_props "jndi_name=${OPENSHIFT_JBOSSWMQ_JNDI_NAME}"
-cart_props "host=${OPENSHIFT_JBOSSWMQ_HOST}"
-cart_props "port=${OPENSHIFT_JBOSSWMQ_PORT}"
+cart_props "connectionnamelist=${OPENSHIFT_JBOSSWMQ_CONNECTIONNAMELIST}"
 cart_props "channel=${OPENSHIFT_JBOSSWMQ_CHANNEL}"
 cart_props "queue_manager=${OPENSHIFT_JBOSSWMQ_QUEUE_MANAGER}"
-
-cp ${OPENSHIFT_JBOSSWMQ_DIR}/configuration/${wmq.version}/wmq.jmsra.rar ${OPENSHIFT_DEPENDENCIES_DIR}/jbosseap/deployments
-
-${OPENSHIFT_JBOSSEAP_DIR}/bin/tools/jboss-cli.sh -c --controller=${OPENSHIFT_JBOSSEAP_IP}:${OPENSHIFT_JBOSSEAP_MANAGEMENT_NATIVE_PORT} --file=${OPENSHIFT_JBOSSWMQ_DIR}/configuration/wmq-install.cli
-cp ${OPENSHIFT_JBOSSEAP_DIR}/standalone/configuration/standalone.xml ${OPENSHIFT_REPO_DIR}/.openshift/config/
-
-${OPENSHIFT_JBOSSEAP_DIR}/bin/control restart
-
-client_result "WebSphere MQ cartridge ${project.version} added (supports WebSphere MQ RAR ${wmq.version})."
